<resources>
    <string name="app_name">Technology Product Order Application</string>

    <string name="open_drawer">Open Navigation Drawer </string>
    <string name="close_drawer">Close Navigation Drawer</string>

    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Account"> My account</string>
    <string name="Cart">My cart</string>
    <string name="History">My history</string>
    <string name="Support">Support</string>
    <string name="ProductDetail">Product detail</string>
    <string name="MyInformation">My information</string>
    <string name="Contact">Contact</string>

    <string name="TitleHomeFragment">Suggestions for you</string>
    <string name="SeeMore">See more</string>
    <string name="Smartphone">Smartphone</string>
    <string name="Laptop">Laptop</string>
    <string name="BuyNow">Buy now</string>
    <string name="AddToCart">Add to cart</string>
    <string name="Brand">Brand</string>
    <string name="Color">Color</string>
    <string name="ReleaseTime">Release time</string>
    <string name="Weight">Weight</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="Name">Name</string>
    <string name="Battery">Battery</string>
    <string name="Notification">NOTIFICATION</string>
    <string name="TotalMoney">Total money</string>
    <string name="TimeToBuy">Time to Buy</string>
    <string name="Repurchase">Repurchase</string>

    <string name="Email">Email</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="DayOfBirth">Day of birth</string>
    <string name="Address">Address</string>
    <string name="Edit">Edit</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>

    <string name="TitleSupport">If you have problems while using this application, please contact us immediately for timely support!</string>

    <string name="the_basket_is_empty">The Basket is Empty</string>
    <string name="total">Total:</string>
    <string name="_0_vnd">0 VND</string>
    <string name="basket_checkout">BASKET CHECKOUT</string>
    <string name="keep_buying">KEEP BUYING</string>
    <string name="textview">TextView</string>
    <string name="textviewname">TextView</string>
    <string name="giam">-</string>
    <string name="tang">+</string>

</resources>