<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragment.basket.BasketFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listviewgiohang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/txttongtien"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/_0_vnd"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnttgiohang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/basket_checkout"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</LinearLayout>