<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iddelete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_selector2"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tenspgh"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imagegiohang"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagegiohang"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/btn_selector2"
            android:src="@mipmap/ic_launcher"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

    <TextView
        android:id="@+id/giagh"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/textviewname"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toStartOf="@+id/btndelete"
        app:layout_constraintStart_toEndOf="@+id/imagegiohang"
        app:layout_constraintTop_toBottomOf="@+id/tenspgh"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btgiamsp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:focusable="auto"
        android:text="@string/giam"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imagegiohang"
        app:layout_constraintTop_toBottomOf="@+id/giagh" />

    <Button
        android:id="@+id/btnvalue"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:background="#1EEDEDED"
        android:focusable="auto"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btgiamsp"
        app:layout_constraintTop_toBottomOf="@+id/giagh"
        tools:ignore="HardcodedText,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btntangsp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:focusable="auto"
        android:text="@string/tang"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/btnvalue"
        app:layout_constraintTop_toBottomOf="@+id/giagh" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/delete"
        android:backgroundTint="#730C0C"
        android:focusable="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tenspgh"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>